# CppProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: .gitkeep
src/: CMakeLists.txt
test/: CMakeLists.txt
